--- a/src/app/confirm-delete-modal/confirm-delete-modal.component.html
+++ b/src/app/confirm-delete-modal/confirm-delete-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Confirm Delete</h2>
+<h2 mat-dialog-title>{{ ConfirmDeleteDialogType.TITLE }}</h2>
 
 <mat-dialog-content>
   <p>Are you sure you want to delete the appointment "<strong>{{ data.appointment.title }}</strong>"?</p>
