--- a/src/app/features/calendar/calendar.component.html
+++ b/src/app/features/calendar/calendar.component.html
@@ -40,25 +40,11 @@
           }
           
           @for (appointment of getAppointmentsForDate(date); track appointment.id) {
-            <mat-card cdkDrag class="appointment-card">
-              <mat-card-header>
-                <mat-card-title>{{ appointment.title }}</mat-card-title>
-                <mat-card-subtitle>
-                  {{ appointment.date | date:'shortTime' }}
-                </mat-card-subtitle>
-              </mat-card-header>
-              <mat-card-content>
-                <p>{{ appointment.description }}</p>
-              </mat-card-content>
-              <mat-card-actions>
-                <button mat-button color="primary" (click)="editAppointment(appointment.id)">
-                  <mat-icon>edit</mat-icon> Edit
-                </button>
-                <button mat-button color="warn" (click)="deleteAppointment(appointment.id)">
-                  <mat-icon>delete</mat-icon> Delete
-                </button>
-              </mat-card-actions>
-            </mat-card>
+            <app-appointment-card
+              [appointment]="appointment"
+              (edit)="editAppointment($event)"
+              (delete)="deleteAppointment($event)">
+            </app-appointment-card>
           }
         </div>
       </div>
