Create dialogService and move logic with dialogs to him, update calendar and header components

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
   <span>Appointment Calendar</span>
   <span class="spacer"></span>
-  <button mat-raised-button color="accent" (click)="openNewAppointmentDialog()">
+  <button mat-raised-button color="accent" (click)="openAppointmentDialog()">
     <mat-icon>add</mat-icon> New Appointment
   </button>
-</mat-toolbar> 
+</mat-toolbar>
