--- a/src/app/features/calendar/components/appointment-card/appointment-card.component.html
+++ b/src/app/features/calendar/components/appointment-card/appointment-card.component.html
@@ -1,12 +1,12 @@
 <mat-card cdkDrag class="appointment-card">
   <mat-card-header>
-    <mat-card-title>{{ appointment.title }}</mat-card-title>
+    <mat-card-title>{{ appointment().title }}</mat-card-title>
     <mat-card-subtitle>
-      {{ appointment.date | date:CALENDAR_CONSTANTS.DATE_FORMAT.TIME }}
+      {{ appointment().date | date:CALENDAR_CONSTANTS.DATE_FORMAT.TIME }}
     </mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <p>{{ appointment.description }}</p>
+    <p>{{ appointment().description }}</p>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button color="primary" (click)="onEdit()">
@@ -16,4 +16,4 @@
       <mat-icon>delete</mat-icon> Delete
     </button>
   </mat-card-actions>
-</mat-card> 
+</mat-card>
