--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,8 @@ html, body {
 .appointment-list.cdk-drop-list-dragging .appointment-card:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.mdc-dialog--open .mat-mdc-dialog-surface {
+  border-radius: 8px;
+  padding: 12px;
+}
